2005-05-16 David Brown <dmlb2000@excite.com>
	* latest.defaults: updated latest to reiser4-for-2.6.11-3
	* info/patches/reiser4_patches/reiser4-for-2.6.11-3: added

2005-05-14 David Brown <dmlb2000@excite.com>
	* latest.defaults: updated latest to patch-2.6.11.9
	* info/patches/PRE_2_6/patch-2.6.11.9: added

2005-05-14 David Brown <dmlb2000@excite.com>
	* latest.defaults: updated latest to 2.6.12-rc4-mm1
	* info/patches/mm_patches/2.6.12-rc4-mm1: added

2005-05-08 David Brown <dmlb2000@excite.com>
	* latest.defaults: updated latest to patch-2.6.12-rc4
	* info/patches/PRE_2_6/patch-2.6.12-rc4: added

2005-05-06 David Brown <dmlb2000@excite.com>
	* latest.defaults: updated latest to 2.6.11-selinux1-nfs1.patch
	* info/patches/nsa_patches/2.6.11-selinux1-nfs1.patch: added

2005-05-06 David Brown <dmlb2000@excite.com>
	* latest.defaults: updated latest to 2.6.11-selinux1.patch
	* info/patches/nsa_patches/2.6.11-selinux1.patch: added

2005-05-06 David Brown <dmlb2000@excite.com>
	* latest.defaults: updated latest to patch-2.6.11-cko5
	* info/patches/cko_patches/patch-2.6.11-cko5: added

2005-05-06 David Brown <dmlb2000@excite.com>
	* latest.defaults: updated latest to patch-2.6.11-ck7
	* info/patches/ck_patches/patch-2.6.11-ck7: added
	* info/patches/ck_patches/patch-2.6.11-ck6: added
	* info/patches/ck_patches/patch-2.6.11-ck5: added

2005-05-04 David Brown <dmlb2000@excite.com>
	* latest.defaults: updated latest to 2.6.12-rc3-mm3
	* info/patches/mm_patches/2.6.12-rc3-mm3: added

2005-05-02 David Brown <dmlb2000@excite.com>
	* latest.defaults: updated latest to 2.6.12-rc3-mm2
	* info/patches/mm_patches/2.6.12-rc3-mm2: added

2005-05-02 David Brown <dmlb2000@excite.com>
	* latest.defaults: updated latest to fbsplash-0.9.2-r2-2.6.12-rc3.patch
	* info/patches/gensplash_patches/fbsplash-0.9.2-r2-2.6.12-rc3.patch: added

2005-05-02 Eric Sandall <eric@sandall.us>
	* templates/menu.lst.tmplt: Source Mage not Sourcemage :)

2005-05-02 David Brown <dmlb2000@excite.com>