@@ -1,0 +1,5 @@
+patchversion="2.6.11.9-grsec"
+source="grsecurity-2.1.5-2.6.11.9-200505121617.patch.gz"
+source_url="http://www.grsecurity.com/${source}"
+depends="patch-2.6.11.9"
+appliedkernels="2.6.11"
