@@ -1,4 +1,8 @@
 2005-05-16 David Brown <dmlb2000@excite.com>
+	* latest.defaults: updated latest to grsecurity-2.1.5-2.6.11.9-200505121617.patch
+	* info/patches/grsecurity_2_6/grsecurity-2.1.5-2.6.11.9-200505121617.patch: added
+
+2005-05-16 David Brown <dmlb2000@excite.com>
 	* latest.defaults: updated latest to reiser4-for-2.6.11-3
 	* info/patches/reiser4_patches/reiser4-for-2.6.11-3: added
 
